@@ -89,6 +89,7 @@
     * 0135 apc_inputs: New Check for APC Input Contacts
     * 0701 emc_isilon_diskstatus: new check for Status of Disks in EMC Isilon Storage Systems
     * 0581 emc_datadomain_disks emc_datadomain_fs:  new checks to monitor disks and filesystems of EMC Datadomain
+    * 0718 logwatch.ec: Optionally monitor the list of forwarded logfiles...
     * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
     * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
     * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
